@@ -1,3 +1,7 @@
+2004-01-06  Andras Varga
+
+        * virtual bool isGUI() {return false;}
+
 2004-01-01  Andras Varga
 	* tkapp.cc/h: handle new cEnvir notifications: moduleCreated(),
 	moduleDeleted(), connectionCreated(), connectionRemoved(),
